test/good/tuples/tuple07.px

func tuple(Int a, Bool b) Int*Bool def
    print a, b
    return a, b

a, (b, c), ((d, e), _, f) = 5, ('b', "c"), (tuple(4, true), "", [])
print a, d, b, c, f
print e
