test/bad/functions/call05.px

func f(a: Int, b: Bool, c: Char = 'c') def
    return

f(10)
